kube/services/netpolicy/ssjdispatcher_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-ssjdispatcher
spec:
  podSelector:
    matchLabels:
      app: ssjdispatcher
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: ssjdispatcher
      - podSelector:
          matchLabels:
             app: revproxy
      ports:
         - port: 8000
         - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: ssjdispatcher
      - ipBlock:
           cidr: 54.224.0.0/12
      - ipBlock:
           cidr: 52.92.16.0/20
      - ipBlock:
           cidr: 0.0.0.0/0
  policyTypes:
   - Ingress
   - Egress
